<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id"
        android:text="0"
        android:visibility="gone"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/company"
            android:text="@string/company"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/company_logo"
            android:contentDescription="@string/company_logo"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:id="@+id/our_logo"
            android:contentDescription="@string/our_logo"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/logo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type"
        android:text="@string/analyze_type"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/header"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/category"
        android:text="@string/category"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/type"/>

    <TextView
        android:id="@+id/subcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:text="@string/sub_category"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subcategory"
        android:layout_above="@id/buttons"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_outline"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/questionLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question"
                android:text="@string/analyze_question"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/product_img"
                android:contentDescription="@string/product_image"
                android:layout_margin="15dp"
                android:padding="5dp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioAnswer"
                android:layout_marginBottom="5dp">
                <RadioButton
                    android:id="@+id/radioYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorPrimary"
                    android:buttonTint="@color/colorPrimary"/>
                <RadioButton
                    android:id="@+id/radioNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:buttonTint="@color/colorPrimary"/>
            </RadioGroup>
            <EditText
                android:id="@+id/company_size"
                android:layout_width="match_parent"
                android:hint="@string/company_size"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:backgroundTint="@color/colorPrimary"/>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:progressTint="@color/colorPrimary"
                android:secondaryProgressTint="@color/endColor"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/buttons">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/back"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_selector"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:id="@+id/next"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/button_selector"/>
    </LinearLayout>
</RelativeLayout>