<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/market"
        android:text="@string/market"
        android:textSize="20sp"
        android:textColor="@color/colorAlert"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_outline"
        android:layout_weight="0"
        android:layout_margin="10dp">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_margin="5dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/all"
            android:text="@string/all"
            android:checked="true"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlyOsa"
            android:text="@string/osa_only"
            android:textColor="@color/colorPrimary"
            android:buttonTint="@color/colorPrimary"/>
    </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_recyclerview"
            android:text="@string/close"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginEnd="7dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_recyclerview"
            android:text="@string/continue_txt"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginStart="7dp"/>
    </LinearLayout>
</LinearLayout>