<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_outline"
        android:layout_weight="0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/success_finish"
            android:textSize="16sp"
            android:id="@+id/success"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/analyze_type"
            android:textColor="#C70039"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:textAlignment="center"/>
    </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorAlert"
        android:gravity="center"
        android:text="@string/next_market"
        android:layout_marginTop="150dp"
        android:layout_weight="0"
        android:id="@+id/redirect_to"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/dismiss"
            android:text="@string/returnMenu"
            android:layout_alignParentEnd="true"
            android:background="@drawable/selector_recyclerview"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/dismissToTasks"
            android:text="@string/dismiss_to_tasks"
            android:background="@drawable/selector_recyclerview"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>
</LinearLayout>
