<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F4"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_outline"
        android:layout_weight="0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/success_finish"
            android:textSize="16sp"
            android:id="@+id/success"
            android:layout_weight="0.8"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/analyze_type"
            android:textColor="#C70039"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/header"
        android:layout_marginTop="18dp"
        android:id="@+id/body">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/start_new"
            android:textSize="16sp"
            android:id="@+id/start_new"
            android:layout_weight="0.8"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/new_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/analyze_type"
            android:textColor="@color/colorAlert"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:textAlignment="center"/>
    </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorAlert"
        android:gravity="center"
        android:text="@string/countdown_alert"
        android:layout_marginTop="150dp"
        android:layout_weight="0"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textColor="@color/colorAlert"
        android:gravity="center"
        android:text="0"
        android:id="@+id/countDown"
        android:layout_weight="0"
        android:visibility="gone"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/dismiss"
        android:text="@string/dismiss"
        android:layout_gravity="right"
        android:background="@drawable/selector_recyclerview"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        style="?android:attr/borderlessButtonStyle"
        android:layout_weight="0"/>
</LinearLayout>
