<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_recyclerview">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:background="#C0C0C0"
        android:id="@+id/header"
        android:textAlignment="center"
        android:textColor="#000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.1">
        <TextView
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/market_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/market"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/market_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/market_address"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:src="@drawable/check_circle_solid"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/doneHalf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:src="@drawable/ic_no_internet"
        android:layout_gravity="center"
        android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>