<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_category"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAlert"
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/sub_category"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_all"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:id="@+id/share_question"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        android:hint="0"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:inputType="number"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_amount"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/colorAlert"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/tv_message"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="10dp"/>
</LinearLayout>