<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/market_finished"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAlert"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Marketi işləyib bitirdiniz mi?"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/no"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_recyclerview"            android:text="@string/no"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginEnd="7dp"/>

        <Button
            android:id="@+id/yes"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_recyclerview"            android:text="@string/yes"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_marginStart="7dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:id="@+id/view"
        android:visibility="gone"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/view2"
        android:visibility="gone"/>
</LinearLayout>